--- a/index.html
+++ b/index.html
@@ -55,30 +55,33 @@
     - #HEADER
   -->
 
-  <header>
-    <div class="top-bar-container">
-      <div class="top-bar">
-        <div class="contact-info">
-          <span class="phone">
-            <i class="fas fa-phone-alt"></i> +91 (778) 899-4131
-          </span>
-          <span class="email">
-            <i class="fas fa-envelope"></i> sales@digitizeads.com
-          </span>
-        </div>
-        <div class="social-icons">
-          <a href="https://www.facebook.com/DigitizeAds?mibextid=ZbWKwL" class="social-icon" target="_blank">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="https://instagram.com/" class="social-icon" target="_blank">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="https://www.linkedin.com/company/digitizeads/" class="social-icon" target="_blank">
-            <i class="fab fa-linkedin"></i>
-          </a>
-          <a href="https://www.youtube.com/@digitizeads1970" class="social-icon" target="_blank">
-            <i class="fab fa-youtube"></i>
-          </a>
+    <header class="section-head">
+      <div class="top-bar-container">
+        <div class="top-bar">
+          <div class="contact-info">
+            <span class="phone">
+              <i class="fas fa-phone-alt"></i> +91 (778) 899-4131
+            </span>
+            <span class="email">
+              <i class="fas fa-envelope"></i> sales@digitizeads.com
+            </span>
+          </div>
+          <div class="social-icons">
+            <a href="https://www.facebook.com/DigitizeAds?mibextid=ZbWKwL"
+              class="social-icon">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://instagram.com/" class="social-icon">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.linkedin.com/company/digitizeads/"
+              class="social-icon">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://www.youtube.com/@digitizeads1970"
+              class="social-icon">
+              <i class="fab fa-youtube"></i>
+            </a>
 
           </div>
         </div>
@@ -365,24 +368,23 @@
 
             <h2 class="h2 section-title">Who We Work With</h2>
 
-
-          <div class="carousel-container">
-            <div class="carousel">
-              <!-- <img src="./assets/img/chanel.webp" alt="Company 1 Logo"> -->
-              <img src="./assets/img/logo1.png" alt="Company 2 Logo">
-              <img src="./assets/img/logo2.png" alt="Company 3 Logo">
-              <img src="./assets/img/logo3.png" alt="Company 4 Logo">
-              <img src="./assets/img/logo4.png" alt="Company 5 Logo">
-              <img src="./assets/img/logo5.png" alt="Company 6 Logo">
-              <img src="./assets/img/logo6.png" alt="Company 7 Logo">
-              <img src="./assets/img/logo7.png" alt="Company 8 Logo">
-              <img src="./assets/img/logo8.png" alt="Company 9 Logo">
-              <img src="./assets/img/logo9.png" alt="Company 10 Logo">
-              <img src="./assets/img/logo10.png" alt="Company 10 Logo">
-              <img src="./assets/img/logo11.png" alt="Company 10 Logo">
-              <img src="./assets/img/logo12.png" alt="Company 10 Logo">
-              <img src="./assets/img/logo13.png" alt="Company 10 Logo">
-              <img src="./assets/img/logo14.png" alt="Company 10 Logo">
+            <div class="carousel-container">
+              <div class="carousel">
+                <!-- <img src="./assets/img/chanel.webp" alt="Company 1 Logo"> -->
+                <img src="./assets/img/biosan-logo.webp" alt="Company 2 Logo">
+                <img src="./assets/img/Bima Carrer__Updated Logo.webp"
+                  alt="Company 3 Logo">
+                <img src="./assets/img/farmart.webp" alt="Company 4 Logo">
+                <img src="./assets/img/infyCare-logo.webp" alt="Company 5 Logo">
+                <img src="./assets/img/logoVilla-la-Madonnina1.webp"
+                  alt="Company 6 Logo">
+                <img src="./assets/img/ross toys logo.webp"
+                  alt="Company 7 Logo">
+                <img src="./assets/img/usce logo.webp" alt="Company 8 Logo">
+                <img src="./assets/img/brotherly-love 215.webp"
+                  alt="Company 9 Logo">
+                <img src="./assets/img/roger person.webp" alt="Company 10 Logo">
+              </div>
             </div>
 
             <section class="chooseus" id="chooseus">
@@ -582,7 +584,7 @@
         - #CTA
       -->
 
-      <div class="testimonials-section">
+          <section class="testimonials-section">
 
             <!-- Section Header Starts -->
             <header class="section-header">
@@ -590,29 +592,73 @@
             </header>
             <!-- Section Header Ends -->
 
-        <!-- Owl Carousel Slider Starts -->
-        <div class="owl-carousel owl-theme testimonials-container">
-          <!-- Item1 Starts -->
-          <div class="item testimonial-card">
-            <main class="test-card-body">
+            <!-- Owl Carousel Slider Starts -->
+            <div class="owl-carousel owl-theme testimonials-container">
+              <!-- Item1 Starts -->
+              <div class="item testimonial-card">
+                <main class="test-card-body">
+                  <div class="quote">
+                    <i class="fa fa-quote-left"></i>
+                    <h2>Awesome Coding</h2>
+                  </div>
+                  <p class="testimonial-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in
+                    reprehenderit in voluptate velit esse.</p>
+                  <div class="ratings">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
 
-              <p>Since active collaboration with Verify Ads, our visibility on the Internet has increased significantly.
-                They really get down to the fundamentals of what our businesses require and provide solutions that
-                count. I must admit we received fantastic service from them!</p>
-              <div class="ratings">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
+                </main>
+                <div class="profile">
+                  <div class="profile-image">
+                    <img src="./assets/img/image1.jpg">
+                  </div>
+                  <div class="profile-desc">
+                    <span>Person Name</span>
+                    <span>Description</span>
+                  </div>
+                </div>
               </div>
-            </main>
-            <div class="profile">
-              <div class="profile-image">
-                <img src="./assets/img/image1.jpg">
-              </div>
-              <div class="profile-desc">
-                <span>Susant Nath</span>
+              <!-- Item1 Ends -->
+
+              <!-- Item2 Starts -->
+              <div class="item testimonial-card">
+                <main class="test-card-body">
+                  <div class="quote">
+                    <i class="fa fa-quote-left"></i>
+                    <h2>Awesome Coding</h2>
+                  </div>
+                  <p class="testimonial-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in
+                    reprehenderit in voluptate velit esse.</p>
+                  <div class="ratings">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+
+                </main>
+                <div class="profile">
+                  <div class="profile-image">
+                    <img src="./assets/img/image2.jpg">
+                  </div>
+                  <div class="profile-desc">
+                    <span>Person Name</span>
+                    <span>Description</span>
+                  </div>
+                </div>
               </div>
               <!-- Item2 Ends -->
 
@@ -817,138 +863,6 @@
 
             </div>
           </div>
-          <!-- Item1 Ends -->
-
-          <!-- Item2 Starts -->
-          <div class="item testimonial-card">
-            <main class="test-card-body">
-
-              <p>The people at Verify Ads have been great, in particular I want to thank you. They’ve been effective for
-                finding potential customers or making people aware of the existence of our store. This is an efficient,
-                business and businesslike approach which appears to be extremely effective. Highly recommended!</p>
-              <div class="ratings">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-            </main>
-            <div class="profile">
-              <div class="profile-image">
-                <img src="./assets/img/image2.jpg">
-              </div>
-              <div class="profile-desc">
-                <span>Prangya Nayak</span>
-              </div>
-            </div>
-          </div>
-          <!-- Item2 Ends -->
-
-          <!-- Item3 Starts -->
-          <div class="item testimonial-card">
-            <main class="test-card-body">
-
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
-              <div class="ratings">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-            </main>
-            <div class="profile">
-              <div class="profile-image">
-                <img src="./assets/img/image3.jpg">
-              </div>
-              <div class="profile-desc">
-                <span>Akash Pradhan</span>
-              </div>
-            </div>
-          </div>
-          <!-- Item3 Ends -->
-
-          <!-- Item4 Starts -->
-          <div class="item testimonial-card">
-            <main class="test-card-body">
-
-              <p>Verify Ads contributed hugely when it came to fine tuning our strategy and it saved a lot of cost in
-                the long run. There being increased ROI and improved level of students’ engagement were observed. They
-                did a very great job for me!</p>
-              <div class="ratings">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-            </main>
-            <div class="profile">
-              <div class="profile-image">
-                <img src="./assets/img/image4.jpg">
-              </div>
-              <div class="profile-desc">
-                <span>Amresh Panda</span>
-              </div>
-            </div>
-          </div>
-          <!-- Item4 Ends -->
-
-          <!-- Item5 Starts -->
-          <div class="item testimonial-card">
-            <main class="test-card-body">
-
-              <p>I can say that collaborating with Verify Ads was easy and with no glitches. I highly recommend their
-                services because they met the deadline. There has been a gradual improvement over the traffic and a
-                progressive increase in the number of conversions. Awesome company, highly recommend services.</p>
-              <div class="ratings">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-            </main>
-            <div class="profile">
-              <div class="profile-image">
-                <img src="./assets/img/image4.jpg">
-              </div>
-              <div class="profile-desc">
-                <span>Aditya Kar</span>
-              </div>
-            </div>
-          </div>
-          <!-- Item5 Ends -->
-
-          <!-- Item6 Starts -->
-          <div class="item testimonial-card">
-            <main class="test-card-body">
-
-              <p>We were able to expand our users on the internet and increased our sales through the use of Verify Ads.
-                They are professional, creative and always quick to respond back in my team. If you have been looking to
-                explore new avenues for your digital marketing business, then I highly endorse them for the job.</p>
-              <div class="ratings">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-              </div>
-            </main>
-            <div class="profile">
-              <div class="profile-image">
-                <img src="./assets/img/image6.jpg">
-              </div>
-              <div class="profile-desc">
-                <span>Sidharth Rout</span>
-              </div>
-            </div>
-          </div>
-          <!-- Item6 Ends -->
-
         </div>
       </main>
 
@@ -1026,18 +940,18 @@
 
       <script>
     // Form submission handler
-    document.getElementById('newsletterForm').addEventListener('submit', async function (event) {
+    document.getElementById('newsletterForm').addEventListener('submit', async function(event) {
       event.preventDefault(); // Prevent default form submission
-
+  
       // Get email input value
       const email = document.getElementById('email').value;
-
+  
       // Check if email input is not empty
       if (!email) {
         alert("Email is required.");
         return;
       }
-
+  
       // API URL
       // const apiUrl = 'http://localhost/restapi/newsletter/newsletter';
       const apiUrl = 'https://verifyads.com/restapi/newsletter/newsletter';
@@ -1052,7 +966,7 @@
             email: email  // URL-encoded format
           })
         });
-
+  
         // Handling the response
         const result = await response.json(); // Parse response as JSON
         if (response.ok) {
