Mobile Responsive done

--- a/footer.html
+++ b/footer.html
@@ -118,7 +118,7 @@
 
   <div class="footer-bottom">
     <p class="copyright">
-      &copy; 2024 Verify Ads All rights reserved
+      &copy; 2024 <a href="http://verifyads.com/" target="_blank" style="text-decoration: none; color: inherit;">Verify Ads</a> All rights reserved
     </p>
   </div>
 
