Css updated max-768px

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
           </ul>
 
           <button id="callButton" class="btn btn-primary">
-            <img src="./assets/img/lets talk.png" alt="Phone Icon"
-              class="btn-icon">
+            <img src="./assets/img/lets talk.png" alt="Phone Icon" class="btn-icon">
+          </button>
 
           </nav>
         </div>
@@ -186,7 +186,7 @@
                 Presence.
               </p>
 
-              <a href="service.html">
+              <a href="service.html" class="started">
                 <button class="btn btn-primary">Get started</button>
               </a>
             </div>
@@ -201,7 +201,8 @@
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen></iframe>
+            allowfullscreen>
+          </iframe>
 
         </section>
 
